@@ -5,7 +5,7 @@ import net.sourceforge.squirrel_sql.plugins.hibernate.mapping.MappedClassInfo;
 public interface MappingInfoProvider
 {
    // Will be called asynchronously to the event dispatch thread
-   MappedClassInfo getMappedClassInfoFor(String token);
+   MappedClassInfo getMappedClassInfoFor(String token, boolean matchNameExact);
 
    boolean mayBeClassOrAliasName(String token);
 }
